--- a/RsDotNetClient.TestHarness/RsDotNetClient.TestHarness.csproj
+++ b/RsDotNetClient.TestHarness/RsDotNetClient.TestHarness.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2D53B1E2-8740-449B-9254-B79FDBA27006}</ProjectGuid>
+    <ProjectGuid>{F9D2D4D2-14A3-491D-A199-5B535E473C3C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RSDotNetClient.RestClient</RootNamespace>
-    <AssemblyName>RSDotNetClient.RestClient</AssemblyName>
+    <RootNamespace>RsDotNetClient.TestHarness</RootNamespace>
+    <AssemblyName>RsDotNetClient.TestHarness</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,8 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="RestSharp">
-      <HintPath>..\packages\RestSharp.104.1\lib\net4\RestSharp.dll</HintPath>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -42,34 +42,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApiRequest.cs" />
-    <Compile Include="Operations\AuthenticationOperation.cs" />
-    <Compile Include="Requests\AuthenticationRequest.cs" />
-    <Compile Include="Operations\ServerOperations.cs" />
+    <Compile Include="AuthenticationOperationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Requests\CreateServerRequest.cs" />
-    <Compile Include="Responses\AuthenticationResponse.cs" />
-    <Compile Include="Responses\CreateServerResponse.cs" />
-    <Compile Include="urls.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>urls.resx</DependentUpon>
-    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Model\RSDotNetClient.Domain.csproj">
       <Project>{4888226D-2FCB-416E-8C24-30ADE1538EFF}</Project>
       <Name>RSDotNetClient.Domain</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="urls.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>urls.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\RestClient\RSDotNetClient.RestClient.csproj">
+      <Project>{2D53B1E2-8740-449B-9254-B79FDBA27006}</Project>
+      <Name>RSDotNetClient.RestClient</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
